--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,13 @@ a:hover {
 
 .side-nav {
     float: left;
-    width: 20%;
+    width: 25%;
+    height: 100vh;
 }
 
 .page-content {
     float: left;
-    width: 80%;
+    width: 85%;
     margin: 10px 0 0 10px;
 }
 
