--- a/src/main.css
+++ b/src/main.css
@@ -331,3 +331,32 @@ select {
 .img-title {
     text-align: center;
 }
+
+.open-button {
+    background-color: #000;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    border-radius: 50%;
+}
+
+
+.chatbot-close {
+    animation-name: cssAnimation;
+    animation-duration: 0.2s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes cssAnimation {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(0);
+    }
+}
