--- a/src/css/chatbot.css
+++ b/src/css/chatbot.css
@@ -46,7 +46,7 @@
     cursor: pointer;
 }
 
-.sent {
+.sent-chatbot {
     background: #f5f5f5;
     color: #333;
     float: right;
@@ -56,7 +56,7 @@
     font-size: 13px;
 }
 
-.replies {
+.replies-chatbot {
     background: #000;
     padding: 10px;
     border-radius: 10px;
